--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
+    <string name="title_activity">FAB_Menu</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="share">Share</string>
@@ -20,4 +20,9 @@
     <string name="onDestroy">onDestroy</string>
     <string name="onRestart">onRestart</string>
     <string name="error">Don\'t exist!</string>
+    <string name="share_file">Share File</string>
+    <string name="chose_photo">Chose Photo</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="fab_button">FAB button</string>
+    <string name="image_background">Image Background</string>
 </resources>
