--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="take_photo">Take Photo</string>
     <string name="fab_button">FAB button</string>
     <string name="image_background">Image Background</string>
+    <string name="cant_save_file">Нельзя сохранить файл!</string>
 </resources>
